legacy/additional_testing/gcc_crash_stats/results/gcc540/save_st/pr69483.c-5.4.0-1.out.txt
pr69483.c:5:10: error: storage size of ‘b’ isn’t known
 struct S b;  
          ^
